# widevin

./: .gitignore  LICENSE  NOTICE  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  PRODUCT.md  RELEASING.md
examples/: hello-world.ts
rust/: Cargo.toml  NOTICE  README.md
rust/examples/: hello-world.rs
rust/fixtures/protobuf/: README.md  rust-models-request.base64  typescript-models-response.base64
rust/src/: auth.rs  chat.rs  connect.rs  constants.rs  error.rs  fetch.rs  json.rs  lib.rs  models.rs  proto.rs  provider.rs  token.rs  types.rs  uuid.rs
rust/tests/: auth.rs  chat.rs  connect.rs  helpers.rs  helpers_and_store.rs  models.rs  protobuf_fixtures.rs  provider.rs
scripts/: bump-version.mjs  check-versions.mjs
src/: index.ts
src/devin/: auth.ts  chat.ts  connect.ts  constants.ts  errors.ts  json.ts  models.ts  proto.ts  provider.ts  token.ts  types.ts  uuid.ts
src/devin/proto/: buf.gen.yaml
test/: auth.test.ts  chat.test.ts  connect.test.ts  helpers.ts  json.test.ts  models.test.ts  protobuf-fixtures.test.ts  release-metadata.test.ts  version-bump.test.ts
