[package]
name = "widevin"
version = "0.1.4"
edition = "2024"
rust-version = "1.85"
description = "Lightweight Rust Devin provider library"
license = "MIT"
repository = "https://github.com/dante-teo/widevin"
readme = "README.md"
keywords = ["devin", "ai", "streaming", "oauth", "protobuf"]
categories = ["api-bindings", "asynchronous"]
include = ["src/**", "tests/**", "fixtures/**", "examples/**", "README.md", "LICENSE", "NOTICE"]

[dependencies]
async-stream = "0.3.6"
base64 = "0.22.1"
flate2 = "1.0.35"
futures-core = "0.3.31"
futures-util = "0.3.31"
indexmap = "2.7.0"
prost = "0.13.4"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.134", features = ["preserve_order"] }
sha2 = "0.10.8"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["fs", "io-util", "net", "rt", "sync"] }
url = "2.5.4"
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.14.0"
tokio = { version = "1.42.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
